# Rag-eval

./: .gitignore  Dockerfile.frontend  Dockerfile.server  README.md  docker-compose.yml  nginx.conf
docs/: Dagent文件选择器方案.md  EVB知识库单跳召回测试报告.md  LLM自动生成问题方案.md  RAG-Eval平台技术规格说明书.md  README.md  multi-hop-example.md  rag-eval-framework-design.md  基于Dagent平台的多模态问答集生成方案.md  多模态问答集生成方案.md  验证报告.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/DagentFileSelector/: index.tsx
frontend/src/constants/: metrics.ts
frontend/src/services/: api.ts  http.ts
sdk/: config.example.yaml  pyproject.toml
sdk/rag_eval/: __init__.py  cli.py  report.py  runner.py  semantic_coverage.py
sdk/rag_eval/adapters/: __init__.py  base.py  dagent.py
sdk/rag_eval/dataset/: __init__.py  generator.py  schema.py
sdk/rag_eval/evaluators/: __init__.py  retrieval.py
sdk/rag_eval/judge/: __init__.py  base.py  openai_compatible.py
sdk/rag_eval/multi_hop/: cli.py  parser.py  report.py  test_parser.py  tester.py
sdk/rag_eval/single_jump/: cli.py  mapper.py  parser.py  quality.py  report.py  tester.py
server/: main.py  requirements.txt  start_server.bat
server/api/: config.py  dataset.py  loop.py  multi_hop.py  multi_hop_gen.py  prompt_template.py  qa_gen.py  qa_gen_dagent.py  report.py  single_jump.py  task.py
server/models/: db.py  schema.sql
server/scripts/: export_loop_all_groups.py  export_loop_batches_recall_md.py
server/service/: dedup.py  loop_engine.py  loop_recall_md.py  task_service.py
(+10 files in other folders)
