[tool.poetry]
name = "rag-eval"
version = "0.1.0"
description = "Platform-agnostic RAG evaluation framework"
authors = []
packages = [{ include = "rag_eval" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.67.0"
aiohttp = "^3.9.0"
numpy = ">=2.0"
pydantic = "^2.0"
pyyaml = "^6.0.3"

[tool.poetry.scripts]
rag-eval = "rag_eval.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
